[package]
name = "physics_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "=0.4.12"
rand = "0.8.5"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = { version = "0.24", features = ["serde"] }
image = "0.25.5"
rayon = "1.10.0"

[profile.release]
debug = true

#cargo flamegraph --release --bin physics_engine
